# rag-eval

./: README.md  pyproject.toml
src/: openwebui_client.py
src/rag_eval/clients/: openwebui_client.py  openwebui_config_client.py
src/rag_eval/config/: config_loader.py  retrieval_config_mapper.py
src/rag_eval/datasets/: dataset_loader.py
src/rag_eval/experiments/: baseline.yaml  rag_template.yaml
src/rag_eval/metrics/: generation_metrics.py  retrieval_metrics.py
src/rag_eval/models/: chat_response.py  chunk_record.py  evaluation_result.py  evaluation_sample.py  evaluation_summary.py  experiment_config.py  generation_metric_result.py  retrieval_metric_result.py  sweep_report.py  sweep_summary_record.py
src/rag_eval/parsers/: response_parser.py
src/rag_eval/reporting/: report_writer.py  sweep_report_builder.py
src/rag_eval/runners/: evaluation_runner.py  experiment_runner.py  experiment_sweep_runner.py
src/rag_eval/storage/: result_writer.py
src/rag_eval/utils/: document_keys.py  serialization.py
src/rag_eval/visualization/: dashboard_writer.py  plot_data_builder.py  plot_writer.py  visualization_runner.py
