[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval"
version = "0.0.0"
description = "RAG evaluation framework for OpenWebUI"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]